tests/fixtures/invalid/pow_int_bool_list.py
# Cannot call pow() with Int, Bool, List[int]
x = pow(1, True, [1, 2, 3])
